/*
Author: 闫刚 (yes7rose@sina.com)
collection.proto (c) 2020
Desc: 集合管理
Created:  2020-09-24T00:40:14.200Z
Modified: !date!
*/

syntax = "proto3";

package swb.cashmere;

import "entity.proto";
import "view.proto";

message Field {
  int32 id = 1;
  bytes name = 2;
  string data_type = 3;
  bool removed = 4;
}

// 取得管理列表
message GetManagesRequest{
}

// 取得管理描写
message GetManageSchemaRequest{
  string manage_id = 1;
}

message GetManageSchemaResponse{
  repeated bytes schema = 1;
}

// 添加管理属性
message NewSchemaFieldRequest{
  string manage_id = 1;
  Field field = 2;
}
message NewSchemaFieldResponse{
  string result = 1;
}

// 移除管理属性
message RemoveSchemaFieldRequest{
  string manage_id = 1;
  int32 field_id = 2;
}
message RemoveSchemaFieldResponse{
  string result = 1;
}

// 编辑管理属性
message EditSchemaFieldNameRequest{
  string manage_id = 1;
  int32 field_id = 2;
  string local = 3;
  string new_name = 4;
}
message EditSchemaFieldNameResponse{
  string result = 1;
}
